--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
+                    <div class="barra"></div>
+                    <div class="forca fraca"></div>
+                    <div class="parametro-senha__texto"></div>
+                     <p>fraca</p>
+                     <p>media</p>
+                     <p>forte</p>
                 </div>
             </div>
         </div>
