--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="conteudo-senha">
             <label for="senha">Senha</label>
-            <input name="senha" type="text" id="campo-senha">
+            <input name="senha" type="text" id="campo-senha" readonly >
         </div>
         <div class="parametro">
             <h3 class="parametro-titulo">Personalize sua senha</h3>
@@ -53,10 +53,11 @@
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
                     <div class="barra"></div>
                     <div class="forca fraca"></div>
-                    <div class="parametro-senha__texto"></div>
-                     <p>fraca</p>
-                     <p>media</p>
-                     <p>forte</p>
+                    <div class="parametro-senha-textos">
+                        <p>Fraca</p>
+                        <p>Média</p>
+                        <p>Forte</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -65,3 +66,6 @@
 </body>
 
 </html>
+
+
+
